Fixed a problem whereby when viewing the page on a computer a horizontal scrollbar would appear when the vertical scrollbar appeared. This was because the header elements were set to 100vw. The solution was to set their widths to 100%.

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,8 @@ body
 
 #root
 {
+    width: 100%;
+
     padding-bottom: 2vh;
 
     margin: auto;
@@ -37,7 +39,7 @@ body
 
 .pageHeading
 {
-    width: 100vw;
+    width: 100%;
     height: 5vh;
 
     font-size: 3vh;
@@ -46,6 +48,11 @@ body
     padding-left: 5vw;
 
     background-color: var(--colour-button);
+}
+
+.pageContainer
+{
+    width: 100%;
 }
 
 h2
