--- a/src/pages/player_names/style_player_names.css
+++ b/src/pages/player_names/style_player_names.css
@@ -1,11 +1,3 @@
-#conPlayerNames
-{
-    /* width: 90vw;
-    max-width: 700px; */
-
-    margin: auto;
-}
-
 .conPlayerName
 {
     /* width: 75%; */
